Added simple hero quest demo

--- a/potionquest-advanced.html
+++ b/potionquest-advanced.html
@@ -54,6 +54,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
-<script src="script-advanced.js"></script>
+<script src="pq-advanced.js"></script>
 
 </html>
