--- a/potionquest-complete.html
+++ b/potionquest-complete.html
@@ -54,6 +54,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
-<script src="script-complete.js"></script>
+<script src="pq-complete.js"></script>
 
 </html>
