--- a/potionquest.html
+++ b/potionquest.html
@@ -54,6 +54,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
-<script src="script.js"></script>
+<script src="pq.js"></script>
 
 </html>
