Added links to PotionQuests from Hero Quest

--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
             </tbody>
         </table>
 
+        <div class="row">
+            <div class="col">
+                <ul>
+                    <li>Also check out <a href="potionquest-complete.html">Endless PotionQuest</a></li>
+                    <li>Drink saved potions in <a href="potionquest-advanced.html">Advanced Endless PotionQuest</a></li>
+                </ul>
+            </div>
+        </div>
+
     </div>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
